# fada-codex

./: .gitignore  README.md  pyproject.toml
docs/: architecture.md
src/fada/: __init__.py  cli.py  domain.py  storage.py
tests/: test_cli.py  test_domain.py  test_storage.py
