[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fada-codex"
version = "0.1.0"
description = "Fundação incremental para uma plataforma AgTech simples, robusta e evolutiva."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "FADA" }
]

[project.scripts]
fada = "fada.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/fada"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
